2007-06-29  Paolo Borelli  <pborelli@katamail.com>

	* gedit-encodings.[ch]:

	Make gedit_encodings_copy just return the same pointer and
	gedit_encodings_free a noop: GeditEncoding is not a real 
	boxed type and the GeditEncoding object for a given encoding
	should always be the same pointer.
	While at it also make sure that our table of encodings is 
	const so that it can go in readonly section. Translation
	of encoding names are resolved lazily.

2007-06-29  Paolo Borelli  <pborelli@katamail.com>

	* gedit-commands-file.c:
	* gedit/gedit-window.[ch]:

	Reimplement differently the persistance of the default path
	of the filechooser that was broken by the removal of 
	"document->priv->is_saving_as".

2007-06-29  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-app.h:
	* gedit/gedit-document-loader.h:
	* gedit/gedit-document-saver.h:
	* gedit/gedit-document.h:
	* gedit/gedit-documents-panel.h:
	* gedit/gedit-message-area.h:
	* gedit/gedit-panel.h:
	* gedit/gedit-plugin-manager.h:
	* gedit/gedit-plugin.h:
	* gedit/gedit-print.h:
	* gedit/gedit-progress-message-area.h:
	* gedit/gedit-tab.h:
	* gedit/gedit-window.h:

	Remove unused GEDIT_*_CONST casts, so they don't appear in the
	developper documentation anymore.

2007-06-29  Steve Frécinaux  <code@istique.net>

	* docs/reference/tmpl/gedit-document.sgml:
	* gedit/gedit-document.c:
	* gedit/gedit-document.h:
	* gedit/gedit-marshal.list:
	* gedit/gedit-window.c:

	Implement Save and Save As as operations of GeditDocument as the
	default handler of a "save" signal.
	Also kill "document->priv->is_saving_as" and write some related bits
	of developper documentation.

2007-06-28  Changwoo Ryu  <cwryu@debian.org>

	* configure.ac: Removed help/ko/Makefile for gnome-doc-utils
	migration.

2007-06-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-file-chooser-dialog.c
	* gedit/gedit-language-manager.c:
	* gedit/gedit-window.c:

	Adapt to gtksourceview changes.

2007-06-27  Paolo Borelli  <pborelli@katamail.com>
