@@ -1,3 +1,8 @@
+2007-06-30  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-tab.[ch]: do not include gedit-print.h in the public
+	gedit-tab header since gedit-print.h is not installed anymore.
+
 2007-06-29  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-encodings.[ch]:
